NXP-6043: add API to save and restore a content view state, and pass it through URL parameters